# my-python-library

./: LICENSE  README.md  pyproject.toml  setup.py
stattools/: __init__.py  descriptive.py  outliers.py
stattools.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_stattools.py
