[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stattools-anannya"
version = "0.1.0"
description = "Lightweight Python statistics library for descriptive stats and IQR-based outlier detection."
readme = "README.md"
authors = [
  { name="Anannya Vyas" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/Anannya-Vyas/my-python-library"
